[gd_scene load_steps=5 format=3 uid="uid://dt2x60hqbfqua"]

[ext_resource type="Script" uid="uid://cikmu1s8mtg36" path="res://Scripts/player_spawner.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://da7p34a4g111f" path="res://Player/Scenes/player_1.tscn" id="2_tkb7t"]
[ext_resource type="PackedScene" uid="uid://51sf76w2bhgt" path="res://Player/Scenes/player_2.tscn" id="3_he0h6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 20)

[node name="Player_Spawner" type="Node2D"]
script = ExtResource("1")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("1")
disabled = true

[node name="Player1" parent="." instance=ExtResource("2_tkb7t")]
position = Vector2(-8, 0)

[node name="Player2" parent="." instance=ExtResource("3_he0h6")]
position = Vector2(10, 0)

[node name="Player_1_Position" type="Marker2D" parent="."]
position = Vector2(-8, -10)

[node name="Player_2_Position" type="Marker2D" parent="."]
position = Vector2(10, -10)
